--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/sigsa-io/Reservation-Proxy#readme",
   "dependencies": {
+    "axios": "^0.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-proxy": "^1.17.0",
     "morgan": "^1.9.1",
